--- a/Cartas/styles/howto.css
+++ b/Cartas/styles/howto.css
@@ -20,7 +20,7 @@ body {
     align-content: center;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.466);
-    margin: -25vw 15vw 0vw 16vw;
+    margin: -26vw 15vw 0vw 16vw;
     padding: 3vw 6vw 3vw 6vw;
     box-shadow: 5px 5px 35px rgba(204, 204, 204, 0.528);
     border-color: white;
@@ -48,7 +48,6 @@ body {
         transform: scale(1.05);
     }
 }
-
 .cont {
     color: white;
     letter-spacing: 5 px;
@@ -59,10 +58,13 @@ body {
     flex-direction: column;
     margin-top: -2vw;
 }
-
+.rules{
+    margin-top: -4vw;
+        font-size: 2vw;
+}
 .iniciar {
     font-size: 3vw;
-    margin: 1vw 6vw 0vw 6vw;
+    margin: 2vw 10vw 0vw 10vw;
     background-color: rgba(75, 75, 75, 0.57);
     color: white;
     text-decoration: none;
@@ -78,33 +80,4 @@ body {
 .textstart {
     font-size: 1.7vw;
     margin: 0vw 0vw 1vw -20;
-}
-
-.how {
-    font-size: 2vw;
-    margin: 3vw 18vw 0vw -20vw;
-    color: white;
-    text-decoration: none;
-    padding: 1.5vw 4vw 1.5vw 4vw;
-    border-radius: 2vw;
-    text-shadow: 15px 15px 55px rgba(255, 255, 255, 0.819);
-}
-
-.score {
-    color: white;
-    letter-spacing: 5 px;
-    text-align: center;
-    padding: 2vw 1vw 2vw 1vw;
-}
-
-.cartas {
-    position: absolute;
-    width: 50vw;
-    transform: rotate(-20deg);
-    margin-top: -19vw;
-    margin-left: 4vw;
-}
-
-.cartas:hover{
-    transform: rotate(45deg);
 }
