--- a/Cartas/styles/game.css
+++ b/Cartas/styles/game.css
@@ -1,5 +1,12 @@
-* {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+@font-face {
+    font-family: 'poker';
+    src: url(/Cartas/fonts/JqkasWild-w1YD6.ttf) format('truetype');
+    font-weight: normal;
+}
+@font-face{
+    font-family: 'title';
+    src:url(../fonts/PokerInOctoberDemo-Dxm3.otf);
+    font-weight: normal;
 }
 
 body {
@@ -32,8 +39,9 @@ body {
     letter-spacing: 200 px;
     text-align: center;
     text-shadow: 15px 15px 55px rgb(255, 255, 255);
-    font-size: 3vw;
+    font-size: 2vw;
     margin: 5vw 0vw 8vw 0vw;
+    font-family: 'title';
 }
 
 .titulo {
@@ -49,62 +57,22 @@ body {
     }
 }
 
-.cont {
-    color: white;
-    letter-spacing: 5 px;
-    text-align: center;
-    font-size: 2vw;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    margin-top: -2vw;
-}
 
-.iniciar {
-    font-size: 3vw;
-    margin: 1vw 6vw 0vw 6vw;
-    background-color: rgba(75, 75, 75, 0.57);
-    color: white;
-    text-decoration: none;
-    border-radius: 2vw;
-    box-shadow: -8px 10px 20px rgba(204, 204, 204, 0.3);
-    padding: 1.5vw 1vw 1.5vw 1vw;
-}
-
-.iniciar:hover {
-    text-shadow: 15px 15px 55px rgba(255, 250, 250, 0.819);
-}
-
-.textstart {
-    font-size: 1.7vw;
-    margin: 0vw 0vw 1vw -20;
-}
-
-.how {
-    font-size: 2vw;
-    margin: 3vw 18vw 0vw -20vw;
+.drill {
     color: white;
     text-decoration: none;
     padding: 1.5vw 4vw 1.5vw 4vw;
     border-radius: 2vw;
     text-shadow: 15px 15px 55px rgba(255, 255, 255, 0.819);
+    font-family: 'poker';
 }
 
-.score {
-    color: white;
-    letter-spacing: 5 px;
-    text-align: center;
-    padding: 2vw 1vw 2vw 1vw;
+.drill h2{
+    font-size: 1.2vw;
+    letter-spacing: 0.2vw;
+}
+.drill h3{
+    font-size: 1.5vw;
+    letter-spacing: 0.5vw;
 }
 
-.cartas {
-    position: absolute;
-    width: 50vw;
-    transform: rotate(-20deg);
-    margin-top: -19vw;
-    margin-left: 4vw;
-}
-
-.cartas:hover{
-    transform: rotate(45deg);
-}
