--- a/Dia9+4/styles/style.css
+++ b/Dia9+4/styles/style.css
@@ -3,7 +3,7 @@ body{
     padding: 20px;
     text-align: center;
 }
-input[placeholder="Ingresa un nombre..."]{
+input[placeholder="Enter a name..."]{
     padding: 10px;
     width: 250px;
     font-size: 16px;
