--- a/Dia16/styles/style.css
+++ b/Dia16/styles/style.css
@@ -1,19 +1,16 @@
 @font-face {
-    font-family: titulo;
+    font-family: "titulo";
     src: url(../media/font/WorkSans-Regular.ttf);
 }
-
 *{
-    padding: 0vw;
-    margin: 0vw;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
+
 body{
-    background: linear-gradient(to right,rgb(79, 85, 93), rgb(39, 51, 63)
-
-    );
+    background: linear-gradient(to right,rgb(79, 85, 93),rgb(39, 51, 63));
 }
-
 .todito{
     display: flex;
     flex-direction: column;
@@ -21,7 +18,6 @@ body{
     height: 30vh;
     width: 100%;
 }
-
 h1{
     margin-top: 130px;
     margin-bottom: 50px;
@@ -29,7 +25,6 @@ h1{
     color: white;
     font-size: 100px;
 }
-
 input{
     position: relative;
     font-size: 20px;
@@ -37,17 +32,25 @@ input{
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     border-color: black;
-    background-color: rgb(0, 0, 0 0.664);
-    padding: 15px 350px 15px 12px;
+    background-color: rgba(0, 0, 0, 0.664);
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 350px;
+    padding-left: 12px;
 }
+
 button{
     position: absolute;
     font-size: 20px;
     border-color: white;
     border-bottom-right-radius: 20px;
     border-top-right-radius: 20px;
-    padding: 15px 10px 15px 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 10px;
+    padding-left: 15px;
 }
+
 
 .opciones{
     display: flex;
@@ -55,7 +58,6 @@ button{
     gap: 20px;
     margin-top: 80px;
     align-items: center;
-
 }
 .capsula{
     display: flex;
@@ -63,22 +65,26 @@ button{
     background-color: rgb(21, 25, 29);
     max-width: 80%;
     border-radius: 30px;
-    padding: 3px 5px 3px 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
+
 .terminado img{
     width: 50px;
-    margin-left: 20px;
+    margin-left: 20px ;
+    margin-right: 20px;
     background-color: white;
     border-radius: 100%;
 }
 
-.eliminado img{
+.eliminar img{
     width: 50px;
-    margin-left: 20px;
     background-color: white;
     border-radius: 100%;
 }
-.botones{
+.botones {
     display: flex;
 }
 .infoText p{
@@ -88,27 +94,30 @@ button{
 
 .capsulaNegativa{
     display: flex;
-    color: white;
-    background-color: rgba(21, 25, 29, 0.300);
+    color: rgba(255, 255, 255, 0.326);
+    background-color: rgb(21, 25, 29);
     max-width: 80%;
     border-radius: 30px;
-    padding: 3px 5px 3px 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
-.terminadoN img{
+
+.terminadoNegativo img{
     width: 50px;
-    margin-left: 20px;
-    background-color: white;
+    margin-left: 20px ;
+    margin-right: 20px;
+    background-color: rgba(255, 255, 255, 0.331);
     border-radius: 100%;
 }
 
-.eliminadoN img{
+.eliminadoNegativo img{
     width: 50px;
-    margin-left: 20px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.366);
     border-radius: 100%;
 }
-
-.infoTextN p{
+.infoTextNegativo p{
     margin-top: 10px;
     font-size: 30px;
     text-decoration: line-through;
